[gd_scene load_steps=69 format=3 uid="uid://bpbe08quey0ls"]

[ext_resource type="Script" path="res://player/player.gd" id="1_att55"]
[ext_resource type="PackedScene" uid="uid://btx5peng3lyd5" path="res://skill/trap/trap.tscn" id="2_gxglo"]
[ext_resource type="Shader" path="res://player/player_outline.gdshader" id="2_hfqsa"]
[ext_resource type="Texture2D" uid="uid://borkrg5dcglr7" path="res://player/assets/ji/idle.png" id="3_rs8s6"]
[ext_resource type="Texture2D" uid="uid://ci2mfwlb48m2a" path="res://player/assets/ji/move.png" id="4_os4yt"]
[ext_resource type="Texture2D" uid="uid://fgu0f83iljbh" path="res://player/assets/wang/idle.png" id="5_00qar"]
[ext_resource type="Texture2D" uid="uid://bvpl3017c68og" path="res://player/assets/wang/move.png" id="6_vk6xp"]
[ext_resource type="Texture2D" uid="uid://cpgm4iiiilhld" path="res://player/assets/shan/idle.png" id="7_yhfgs"]
[ext_resource type="Texture2D" uid="uid://yyvdvb0ant4v" path="res://player/assets/shan/move.png" id="8_an322"]
[ext_resource type="Texture2D" uid="uid://7tfjf7ig2msn" path="res://player/assets/wang2/idle.png" id="9_q6kvw"]
[ext_resource type="Texture2D" uid="uid://ct2esktu2itin" path="res://player/assets/wang2/move.png" id="10_vh5n2"]
[ext_resource type="Texture2D" uid="uid://bvpneb54g0i48" path="res://player/assets/me/idle.png" id="11_fl6nm"]
[ext_resource type="Texture2D" uid="uid://v4ljeps4lvm1" path="res://player/assets/me/move.png" id="12_u3vvs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w41wg"]
shader = ExtResource("2_hfqsa")
shader_parameter/outline_color = Color(1, 1, 5.376, 1)
shader_parameter/outline_width = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wteyl"]
atlas = ExtResource("3_rs8s6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ocr"]
atlas = ExtResource("3_rs8s6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwkn2"]
atlas = ExtResource("3_rs8s6")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_130en"]
atlas = ExtResource("4_os4yt")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyhwl"]
atlas = ExtResource("4_os4yt")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_anxof"]
atlas = ExtResource("4_os4yt")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpwx8"]
atlas = ExtResource("4_os4yt")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygtwh"]
atlas = ExtResource("4_os4yt")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwxa8"]
atlas = ExtResource("4_os4yt")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ap8lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wteyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ocr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwkn2")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_130en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyhwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anxof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpwx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygtwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwxa8")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0gxj"]
atlas = ExtResource("5_00qar")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smmrs"]
atlas = ExtResource("5_00qar")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyt8t"]
atlas = ExtResource("5_00qar")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m23w"]
atlas = ExtResource("6_vk6xp")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruk3s"]
atlas = ExtResource("6_vk6xp")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkejf"]
atlas = ExtResource("6_vk6xp")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_63k60"]
atlas = ExtResource("6_vk6xp")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mnsp"]
atlas = ExtResource("6_vk6xp")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_volxq"]
atlas = ExtResource("6_vk6xp")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3xrf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0gxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smmrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyt8t")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m23w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruk3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkejf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63k60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_volxq")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_whvsa"]
atlas = ExtResource("7_yhfgs")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5xvc"]
atlas = ExtResource("7_yhfgs")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtr4q"]
atlas = ExtResource("7_yhfgs")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjs8h"]
atlas = ExtResource("8_an322")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_06pjb"]
atlas = ExtResource("8_an322")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd3ai"]
atlas = ExtResource("8_an322")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_npf1b"]
atlas = ExtResource("8_an322")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7igw"]
atlas = ExtResource("8_an322")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s88d"]
atlas = ExtResource("8_an322")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_wgynr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_whvsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5xvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtr4q")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjs8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06pjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd3ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npf1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7igw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s88d")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mf5r1"]
atlas = ExtResource("9_q6kvw")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_taouf"]
atlas = ExtResource("9_q6kvw")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq16w"]
atlas = ExtResource("9_q6kvw")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_suq15"]
atlas = ExtResource("10_vh5n2")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb1co"]
atlas = ExtResource("10_vh5n2")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2gbn"]
atlas = ExtResource("10_vh5n2")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl18x"]
atlas = ExtResource("10_vh5n2")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkhow"]
atlas = ExtResource("10_vh5n2")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_607o0"]
atlas = ExtResource("10_vh5n2")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qbcjl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf5r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taouf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq16w")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suq15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb1co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2gbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl18x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkhow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_607o0")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qvg47"]
atlas = ExtResource("11_fl6nm")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7p8e"]
atlas = ExtResource("11_fl6nm")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib8yh"]
atlas = ExtResource("11_fl6nm")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhw5q"]
atlas = ExtResource("12_u3vvs")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq48g"]
atlas = ExtResource("12_u3vvs")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y80rb"]
atlas = ExtResource("12_u3vvs")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxo84"]
atlas = ExtResource("12_u3vvs")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuonb"]
atlas = ExtResource("12_u3vvs")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1utc"]
atlas = ExtResource("12_u3vvs")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_kypb3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvg47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7p8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib8yh")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhw5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq48g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y80rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxo84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuonb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1utc")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kckde"]
radius = 15.0

[sub_resource type="Environment" id="Environment_ymg07"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.6
glow_hdr_scale = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3enjc"]
radius = 200.062

[sub_resource type="CircleShape2D" id="CircleShape2D_lv1b8"]
radius = 29.7321

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 50
collision_mask = 3
script = ExtResource("1_att55")

[node name="trap" parent="." instance=ExtResource("2_gxglo")]

[node name="ji" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_w41wg")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ap8lr")
animation = &"run"
autoplay = "idle"

[node name="wang" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_w41wg")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_a3xrf")
animation = &"run"
autoplay = "idle"

[node name="shan" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_w41wg")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_wgynr")
animation = &"run"
autoplay = "idle"

[node name="wang2" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_w41wg")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_qbcjl")
animation = &"run"
autoplay = "idle"

[node name="me" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_w41wg")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_kypb3")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 15)
shape = SubResource("CapsuleShape2D_kckde")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ymg07")

[node name="collect_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CharacterBody2D" type="CollisionShape2D" parent="collect_area"]
modulate = Color(0.1158, 0.036, 0.72, 1)
shape = SubResource("CircleShape2D_3enjc")

[node name="stop_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="stop_area"]
shape = SubResource("CircleShape2D_lv1b8")

[connection signal="body_entered" from="collect_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="stop_area" to="." method="_on_stop_area_body_entered"]
